Entity API tweaks